--- a/TextWriter/TextWriter.csproj
+++ b/TextWriter/TextWriter.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BitmapFuncs.cs" />
     <Compile Include="CharacterSample.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
